# Pas2C

./: CMakeLists.txt  README  build  converter.sh  custom.h  pascal.l  pascal.y  sample_input.pas  sample_output.c
src/: custom.h  pascal.y
